[ESME-316] Fix issue with sign-in button getting out of place
git-svn-id: https://svn.apache.org/repos/asf/esme/trunk/server@1054725 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/webapp/style/style.css
+++ b/src/main/webapp/style/style.css
@@ -238,7 +238,10 @@ label {
 }
 .login-btn, .update-btn, .submit-btn { 
 	float:right;	
-}                
+}             
+.login-btn {
+  margin-top:10px;
+}   
 
 .share-select {  
   display:inline;            
